feat: add user module
